# openpose-gesture-segmentation

./: .gitignore  LICENSE  README.md  pyproject.toml
src/openpose_gesture_segmentation/: export.py  io.py  main.py  segmentation.py
